--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "gatsby": "^2.13.73",
+    "gatsby-image": "^2.2.13",
+    "gatsby-plugin-sharp": "^2.2.17",
+    "gatsby-source-filesystem": "^2.1.16",
+    "gatsby-transformer-remark": "^2.6.19",
+    "gatsby-transformer-sharp": "^2.2.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2"
